[gd_scene load_steps=9 format=3 uid="uid://bsk8drsfka3vc"]

[ext_resource type="PackedScene" uid="uid://bxb53pc827hqw" path="res://Environment/Platform/platform.tscn" id="1_ran76"]
[ext_resource type="PackedScene" uid="uid://cpgedr4f3xri6" path="res://Player/player.tscn" id="2_s130j"]
[ext_resource type="Script" path="res://Scripts/PlayerCamera.gd" id="3_e1isg"]
[ext_resource type="Shader" path="res://Shaders/screen_transition.gdshader" id="4_l0nnk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3sk8h"]
shader = ExtResource("4_l0nnk")
shader_parameter/progress = null
shader_parameter/diamondPixelSize = 50.0

[sub_resource type="Animation" id="Animation_gmksn"]
resource_name = "transition_fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:transition_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_b27ik"]
resource_name = "transition_fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:transition_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2yhcd"]
_data = {
"transition_fade_in": SubResource("Animation_gmksn"),
"transition_fade_out": SubResource("Animation_b27ik")
}

[node name="TestingLevel2" type="Node2D"]

[node name="Platform" parent="." instance=ExtResource("1_ran76")]

[node name="Player" parent="." node_paths=PackedStringArray("Camera") instance=ExtResource("2_s130j")]
position = Vector2(0, -128)
Camera = NodePath("../PlayerCamera")

[node name="PlayerCamera" type="Camera2D" parent="." node_paths=PackedStringArray("p")]
limit_left = 0
limit_top = -1855
limit_right = 4095
limit_bottom = 0
editor_draw_limits = true
script = ExtResource("3_e1isg")
p = NodePath("../Player")
transition_progress = 0.0

[node name="CanvasLayer" type="CanvasLayer" parent="PlayerCamera"]

[node name="TransitionColor" type="ColorRect" parent="PlayerCamera/CanvasLayer"]
material = SubResource("ShaderMaterial_3sk8h")
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="TransitionAnimation" type="AnimationPlayer" parent="PlayerCamera"]
libraries = {
"": SubResource("AnimationLibrary_2yhcd")
}
